[tool.poetry]
name = "python-accounting"
version = "1.0.1"
description = "The world's most comprehensive python Double Entry Accounting Library"
authors = ["Edward Mungai <emungai@microbooks.io>"]
readme = "README.md"
packages = [{include = "python_accounting"}, {include = "config.toml"}]

[tool.poetry.dependencies]
python = "~3.9.0|~3.10.0|~3.11.0|~3.12.0"
sqlalchemy = "^2.0.23"
python-dateutil = "^2.8.2"
strenum = "^0.4.15"
toml = "^0.10.2"
mysqlclient = "^2.2.4"
psycopg2 = "^2.9.9"
pydantic = "^2.7.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
